# das-tader-trading-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: das_trader.cfg
src/: __init__.py  config.py  logging_config.py  main.py
src/bots/: __init__.py  short_selling_bot.py
src/das_trader/: __init__.py  fix_client.py  market_data.py
src/execution/: __init__.py  execution_bot.py
src/risk/: __init__.py  risk_manager.py
src/scanner/: __init__.py  scanner_bot.py
src/services/: __init__.py  metrics.py
src/utils/: __init__.py
